fix wp-caption overflowing it's container

--- a/assets/styles/components/_wp-classes.less
+++ b/assets/styles/components/_wp-classes.less
@@ -30,6 +30,7 @@
 // Captions
 .wp-caption {
   &:extend(.thumbnail all);
+  max-width: 100%;
 }
 .wp-caption-text {
   &:extend(.thumbnail .caption all);
